--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
   "name": "treesurf",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "main": "main/index.js",
+  "productName": "Treesurf",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "clean": "rimraf dist main renderer/out renderer/.next",
+    "dev": "npm run build-electron && electron .",
+    "build-renderer": "next build renderer && next export renderer",
+    "build-electron": "tsc -p electron-src",
+    "build": "npm run build-renderer && npm run build-electron",
+    "pack-app": "npm run build && electron-builder --dir",
+    "dist": "npm run build && electron-builder",
+    "type-check": "tsc -p ./renderer/tsconfig.json && tsc -p ./electron-src/tsconfig.json"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ZOI-dayo/treesurf.git"
+  "dependencies": {
+    "electron-is-dev": "^1.1.0",
+    "electron-next": "^3.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
-  "author": "ZOI_dayo",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ZOI-dayo/treesurf/issues"
-  },
-  "homepage": "https://github.com/ZOI-dayo/treesurf#readme",
   "devDependencies": {
-    "electron": "^23.2.0"
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.9",
+    "electron": "^13",
+    "electron-builder": "^23.0.3",
+    "next": "latest",
+    "rimraf": "^3.0.0",
+    "typescript": "^4.0.5"
+  },
+  "build": {
+    "asar": true,
+    "files": [
+      "main",
+      "renderer/out"
+    ]
   }
 }
